--- a/EXOCREW.HTML
+++ b/EXOCREW.HTML
@@ -1,13 +1,97 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html>
+<html lang="en"><head></head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bootstrap demo</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./CSS/EXOCREW.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&amp;display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200;0,300;0,400;0,700;1,200;1,300&amp;display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div class="homescreen" id="homescreen">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid d-flex justify-space-between">
+        <a class="navbar-brand" href=""><img src="./imgs/Screenshot 2024-09-11 212635.png" alt="" class="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active btn-primary btn" aria-current="page" href="#homscreen">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-primary active" href="#">About Us</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle btn-primary btn active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="dropdown">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" data-bs-popper="static">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container1 text-start d-flex justify-content-center align-items-center" id="About">
+      <div class="card1 d-flex align-items-center justify-content-center">
+        <div class="s1 section">
+          <img src="./imgs/WhatsApp Image 2024-09-10 at 5.04.17 PM (1).jpeg" alt="Man with blue shirt, smiling and happy with white background and brown beard" class="s1-img">
+        </div>
+          <div class="s2 section">
+            <h2 class="h">Hello,</h2>
+            <p class="s2-p"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+              ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <br>
+              <br>
+              ------------------------------------------------------------------------------------------------------------------------
+            </p>
+            <div class="info-s">
+              <div class="r1">
+                <p class="info"><span class="bold">Name:</span> Rdam smith</p>
+                <p class="info"><span class="bold">Age:</span> 26 Year</p>
+                <p class="info"><span class="bold">Freelance:</span> Available</p>
+                <button class="btns">MEMBERS<i class="fa-solid fa-download"></i></button>
+              </div>
+              <div class="r2">
+                <p class="info"><span class="bold">Job Title:</span> UI/UX Designer</p>
+                <p class="info"><span class="bold">Location:</span> United States, US</p>
+                <p class="info"><span class="bold">E-mail:</span><a href="#"></a> example@gmail.com</p>
+                <button class="btns">OUR CHALLENGE<i class="fa-solid fa-paper-plane icons"></i></button>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./imgs/jup.jpg" class="d-block carousel-img" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./imgs/earth.jpg" class="d-block carousel-img" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100 carousel-img" alt="...">
+        </div>
+      </div>
+    </div>
+  </div> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
